<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndesiteV10</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="deploy">Deployment Mode</string>
    <string name="detumble">Detumble Mode</string>
    <string name="idle">Idle Mode</string>
    <string name="science">Science Mode</string>
    <string name="transmit">Transmission Mode</string>
    <string name="finish">Finish</string>

</resources>
