<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <Button
        android:id="@+id/detumble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detumble" />

    <Button
        android:id="@+id/deploy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deploy" />

    <Button
        android:id="@+id/idle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idle" />

    <Button
        android:id="@+id/science"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/science" />

    <Button
        android:id="@+id/transmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transmit" />

    <EditText
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:editable="false"
        android:clickable="false"
        android:ems="10" >
    </EditText>

</LinearLayout>
